facebook commits added

--- a/week_05/facebook/style.css
+++ b/week_05/facebook/style.css
@@ -1,9 +1,9 @@
-
+/*general css*/
 html, body{
     width: 100vw;
     height: 100vh;
 }
-
+/*main content css*/
 main{
     display: flex;
     justify-content: space-evenly;
